--- a/plants/index.html
+++ b/plants/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style768.css">
+    <link rel="stylesheet" href="./css/style535.css">
     <link rel="stylesheet" href="./css/style380.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="icon" href="./assets/image/svg/logo_vector.svg" sizes="32x32">
@@ -30,6 +31,10 @@
                     <li><a href="#Contacts" class="header-nav-list-li">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="burger-icon">
+                <span class="one-span"></span>
+                <span class="two-span"></span>
+            </div>
         </div>
     </header>
     <main class="main">
@@ -43,6 +48,9 @@
                     <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s.</h3>
                     <button>LEARN MORE</button>
+                </div>
+                <div class="img-welcome-768">
+                    <img src="./assets/image/jpg/leafs.jpg" alt="leafs">
                 </div>
             </div>
         </section>
@@ -67,50 +75,56 @@
                         <h2>Service and our projects</h2>
                     </div>
                     <div class="button-service">
-                        <button>Gardens</button>
-                        <button>Lawn</button>
-                        <button>Planting</button>
+                        <button class="btn-garden">Gardens</button>
+                        <button class="btn-lawn">Lawn</button>
+                        <button class="btn-plantingn">Planting</button>
                     </div>
                 </div>
                 <div class="tablets-service">
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/1.jpg" alt="1">
+                        <div class="content-card garden">
+                            <img src="./assets/image/jpg/1.jpg" alt="1" class="img1440-garden">
+                            <img src="./assets/image/jpg/1-768.jpg" alt="1" class="img768-garden">
                             <h4 class="correct-text-right">Garden care</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/2.jpg" alt="2">
+                        <div class="content-card planting">
+                            <img src="./assets/image/jpg/2.jpg" alt="2" class="img1440-planting">
+                            <img src="./assets/image/jpg/2-768.jpg" alt="2" class="img768-planting">
                             <h4>Planting</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/3.jpg" alt="3">
+                        <div class="content-card lawn">
+                            <img src="./assets/image/jpg/3.jpg" alt="3" class="img1440-lawn">
+                            <img src="./assets/image/jpg/3-768.jpg" alt="3" class="img768-lawn">
                             <h4 class="correct-text-left">Lawn care</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/4.jpg" alt="4">
+                        <div class="content-card planting2">
+                            <img src="./assets/image/jpg/4.jpg" alt="4" class="img1440-planting">
+                            <img src="./assets/image/jpg/4-768.jpg" alt="4" class="img768-planting">
                             <h4 class="correct-text-right">Planting</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/5.jpg" alt="5">
+                        <div class="content-card garden2">
+                            <img src="./assets/image/jpg/5.jpg" alt="5" class="img1440-garden">
+                            <img src="./assets/image/jpg/5-768.jpg" alt="5" class="img768-garden">
                             <h4>Garden care</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="content-card">
-                            <img src="./assets/image/jpg/6.jpg" alt="6">
+                        <div class="content-card planting3">
+                            <img src="./assets/image/jpg/6.jpg" alt="6" class="img1440-planting">
+                            <img src="./assets/image/jpg/6-768.jpg" alt="6" class="img768-planting">
                             <h4 class="correct-text-left">Planting</h4>
                             <h5>Lorem Ipsum has been the industry</h5>
                         </div>
@@ -125,29 +139,58 @@
                         <h2>Prices</h2>
                     </div>
                     <div class="choose-table">
-                        <form action="formdata" method="post" name="form1">
-                            <p><select name="list1">
-                                    <option>Basics</option>
-                                    <!--<option value="1">Option</option>-->
-                                </select></p>
-                        </form>
-                        <form action="formdata" method="post" name="form1">
-                            <p><select name="list1">
-                                    <option>Standart</option>
-                                    <!--<option value="1">Option</option>-->
-                                </select></p>
-                        </form>
-                        <form action="formdata" method="post" name="form1">
-                            <p><select name="list1">
-                                    <option>Pro care</option>
-                                    <!--<option value="1">Option</option>-->
-                                </select></p>
-                        </form>
+                        <div class="basics">
+                            <button class="select">Basics</button>
+                            <div class="panel">
+                                <div class="line"></div>
+                                <p>Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                <div class="price-text">
+                                    <p class="orange-text">$15 </p>
+                                    <p class="black-text">/ per hour</p>
+                                </div>
+                                <a href="#Contacts">
+                                    <button class="button-panel">Order</button>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="standart">
+                            <button class="select">Standart</button>
+                            <div class="panel">
+                                <div class="line"></div>
+                                <p>Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                <div class="price-text">
+                                    <p class="orange-text">$25 </p>
+                                    <p class="black-text">/ per hour</p>
+                                </div>
+                                <a href="#Contacts">
+                                    <button class="button-panel">Order</button>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="pro-care">
+                            <button class="select">Pro care</button>
+                            <div class="panel">
+                                <div class="line"></div>
+                                <p>Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                <div class="price-text">
+                                    <p class="orange-text">$35 </p>
+                                    <p class="black-text">/ per hour</p>
+                                </div>
+                                <a href="#Contacts">
+                                    <button class="button-panel">Order</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="help-price">
                     <div class="caption-help-price">
-                        <h2>Our best <span>gardeners</span> are ready to help you</h2>
+                        <h2>Our best <span>gardeners</span> are </h2>
+                        <h2>ready to help you</h2>
+                    </div>
+                    <div class="caption-help-price768">
+                        <h2>Our best <span>gardeners</span> are </h2>
+                        <h2>ready to help you</h2>
                     </div>
                     <div class="button-price">
                         <button>Contact us</button>
@@ -167,24 +210,119 @@
                     <h2>Contact us</h2>
                 </div>
                 <div class="table-contacts">
+                    <div class="select-city">
+                        <button class="name-select-city">City</button>
+                        <ul class="city-list">
+                            <li class="city-list-item">Canandaigua, NY</li>
+                            <li class="city-list-item">New York City</li>
+                            <li class="city-list-item">Yonkers, NY</li>
+                            <li class="city-list-item">Sherrill, NY</li>
+                        </ul>
+                        <input type="text" name="select-input" value="" class="city-input">
+                    </div>
+                    <div class="canandaiguacity">
+                        <div class="city-adress">
+                            <div class="points">
+                                <p>City:</p>
+                                <p>Phone:</p>
+                                <p>Office adress:</p>
+                            </div>
+                            <div class="description-points">
+                                <p>Canandaigua, NY</p>
+                                <p>+1 585 393 0001</p>
+                                <p>151 Charlotte Street</p>
+                            </div>
+                        </div>
+                        <a href="tel:+15853930001">
+                            <button class="btn-city">Call us</button>
+                        </a>
+                    </div>
+                    <div class="new-york-city">
+                        <div class="city-adress">
+                            <div class="points">
+                                <p>City:</p>
+                                <p>Phone:</p>
+                                <p>Office adress:</p>
+                            </div>
+                            <div class="description-points">
+                                <p>New York City</p>
+                                <p>+1 212 456 0002</p>
+                                <p>9 East 91st Street</p>
+                            </div>
+                        </div>
+                        <a href="tel:+12124560002">
+                            <button class="btn-city">Call us</button>
+                        </a>
+                    </div>
+                    <div class="yonkers-city">
+                        <div class="city-adress">
+                            <div class="points">
+                                <p>City:</p>
+                                <p>Phone:</p>
+                                <p>Office adress:</p>
+                            </div>
+                            <div class="description-points">
+                                <p>Yonkers, NY</p>
+                                <p>+1 914 678 0003</p>
+                                <p>511 Warburton Ave</p>
+                            </div>
+                        </div>
+                        <a href="tel:+19146780003">
+                            <button class="btn-city">Call us</button>
+                        </a>
+                    </div>
+                    <div class="sherrill-city">
+                        <div class="city-adress">
+                            <div class="points">
+                                <p>City:</p>
+                                <p>Phone:</p>
+                                <p>Office adress:</p>
+                            </div>
+                            <div class="description-points">
+                                <p>Sherrill, NY</p>
+                                <p>+1 315 908 0004</p>
+                                <p>14 WEST Noyes BLVD</p>
+                            </div>
+                        </div>
+                        <a href="tel:+13159080004">
+                            <button class="btn-city">Call us</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="contacts-wrapper768">
+                <div class="capture-contacts">
+                    <h2>Contact us</h2>
+                </div>
+                <div class="table-contacts">
                     <form action="formdata" method="post" name="form1">
-                        <p><select name="list1">
-                                <option>City</option>
-                                <!--<option value="1">Option</option>-->
-                            </select></p>
+                        <select name="list1">
+                            <option value="hide">City</option>
+                            <option value="canandaigua">Canandaigua, NY</option>
+                            <option value="new-york">New York City</option>
+                            <option value="yonkers">Yonkers, NY</option>
+                            <option value="sherrill">Sherrill, NY</option>
+                        </select>
                     </form>
+                </div>
+                <div class="img-contacts">
+                    <img src="./assets/image/jpg/contact_woman768.jpg" alt="woman">
                 </div>
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-wrapper">
-            <div class="year"><p>©</p><p>2022</p><a href="https://github.com/dromari">github</a>
+            <div class="year">
+                <p>©</p>
+                <p>2022</p><a href="https://github.com/dromari">github</a>
             </div>
             <div class="rss">
                 <a href="https://rs.school/js-stage0/">
                     <!--<img src="./assets/image/svg/rs_school_js.svg" alt="RSSchool">-->
-                    Rolling Scopes School</a>
+                    Rolling Scopes School
+                </a>
             </div>
             <div class="social">
                 <nav class="footer-social">
@@ -206,7 +344,8 @@
             </div>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
+    <!--<script>alert('Привет, проверяющий.')</script>-->
 </body>
 
 </html>
